Finalizada a rota para mostrar os gastos ordenados por ano/mes.
