# src/controllers/transactionController.js
@@ -1,15 +1,30 @@
 const xlsx = require('xlsx-populate')
-const { getTransactionsByUserIDAndQuery, getAllTransactionsToRows, addTransactionsToUser, removeTransactionToUser, addOneTransactionToUser } = require("../service/transactionService")
+const { getTransactionsByUserIDAndQuery, getAllTransactionsToRows, addTransactionsToUser, removeTransactionToUser, addOneTransactionToUser, getOrderedTransactionByMothAndYear } = require("../service/transactionService")
 const { getUserById } = require('../service/userService')
-const { columnsImport, typesXLS } = require('../utils/constants')
+const { columnsImport, typesXLS, monthsOfYear } = require('../utils/constants')
 
 module.exports = {
+    getTotalTransactions: async (req, res) => {
+        // #swagger.tags = ['Transaction']
+        // #swagger.description = 'Endpoint para buscar as transações de um usuário exibindo seus totais por ano/mês.'
+        // try {
+            const { userID } = req.params
+            if (!userID) throw new Error("Necessario informar um usuário para encontrar suas movimentações.")
+            const query = req.query
+            await getUserById(userID)
+            const transactions = await getTransactionsByUserIDAndQuery(userID, query)
+            const transactionsOrdered = getOrderedTransactionByMothAndYear(transactions)            
+            res.status(200).json({ message: "sucesso", expenses: transactionsOrdered })
+        // } catch (e) {
+        //     res.status(404).json({ message: e.message })
+        // }
+    },
     show: async (req, res) => {
         // #swagger.tags = ['Transaction']
         // #swagger.description = 'Endpoint para buscar as transações de um usuário.'
         try {
             const { userID } = req.params
-            if(!userID) throw new Error("Necessario informar um usuário para encontrar suas movimentações.")
+            if (!userID) throw new Error("Necessario informar um usuário para encontrar suas movimentações.")
             const query = req.query
             await getUserById(userID)
             const transactions = await getTransactionsByUserIDAndQuery(userID, query)
@@ -23,7 +38,7 @@ module.exports = {
         // #swagger.description = 'Endpoint para deletar uma transação de um usuário.'
         try {
             const { userID, financialID } = req.params
-            if(!userID || !financialID ) throw new Error("Dados Insuficientes para excluir.")
+            if (!userID || !financialID) throw new Error("Dados Insuficientes para excluir.")
             const user = await getUserById(userID)
             await removeTransactionToUser(userID, financialID)
             res.status(200).json({ message: "Transação deletada com sucesso" })
@@ -46,12 +61,12 @@ module.exports = {
             const { userID } = req.params
             const { price, typeOfExpenses, date, name } = req.body
             Object.keys(req.body).map(field => {
-                if(!field || !req.body[field]) throw new Error(`O campo \'${field}\' é obrigatorio.`)
+                if (!field || !req.body[field]) throw new Error(`O campo \'${field}\' é obrigatorio.`)
             })
             const columns = Object.keys(req.body)
-            const existAllKeys = columns.every((column, index) => columnsImport[index] === column )
+            const existAllKeys = columns.every((column, index) => columnsImport[index] === column)
             if (!existAllKeys || (columns.length !== columnsImport.length)) throw new Error("Dados para importação invalidos.")
-            const transactionData = { 
+            const transactionData = {
                 price,
                 typeOfExpenses,
                 date,
@@ -59,7 +74,7 @@ module.exports = {
             }
             const user = await getUserById(userID)
             await addOneTransactionToUser(transactionData, user)
-            res.status(200).json({ message: "Transação adicionada com sucesso."})
+            res.status(200).json({ message: "Transação adicionada com sucesso." })
         } catch (e) {
             res.status(404).json({ message: e.message })
         }
@@ -77,11 +92,11 @@ module.exports = {
         } */
         try {
             const { userID } = req.params
-            if(!userID) throw new Error("Necessario um identificados de usuario para atribuir as transações.")
-            if(!req.file) throw new Error("Arquivo para fazer a importação não encontrado")
+            if (!userID) throw new Error("Necessario um identificados de usuario para atribuir as transações.")
+            if (!req.file) throw new Error("Arquivo para fazer a importação não encontrado")
             const mineType = req.file.mimetype
             const allowedType = typesXLS === mineType
-            if(!allowedType) throw new Error("Tipo de Arquivo não permitido.")
+            if (!allowedType) throw new Error("Tipo de Arquivo não permitido.")
             const { buffer } = req.file
             const dataXLSX = await xlsx.fromDataAsync(buffer, { type: 'buffer' })
             const rows = dataXLSX.sheet(0).usedRange().value()
